--- a/comingsoon.html
+++ b/comingsoon.html
@@ -52,6 +52,7 @@
                                                 typewrite("coming-soon", "Coming Soon...");
                                         });
                                         </script>
+                                    test
                                 </h1>  
         
                         </div>
